# tree-sitter-chicory

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  chicory.g4  example-file.chic  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-chicory.pc.in
bindings/c/tree_sitter/: tree-sitter-chicory.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_chicory/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterChicoryTests/: TreeSitterChicoryTests.swift
queries/: brackets.scm  highlights.scm  indents.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: arrays.txt  basics.txt  blocks.txt  destructuring.txt  function_blocks.txt  functions.txt  global.txt  if_expressions.txt  jsx.txt  match.txt  modules.txt  parenless_functions.txt  records.txt  types.txt
